--- a/compiled-templates/modules/insights/insights.tpl.html
+++ b/compiled-templates/modules/insights/insights.tpl.html
@@ -1,8 +1,9 @@
 <div class="insights-container">
   <div class="left-navbar">
-    <a data-ng-class="{ active: activeTab.name == 'earnings' }" data-ng-model="activeTab.name" btn-radio="'earnings'" class="left-nav-link">Earnings<i class="fa fa-caret-right"></i></a>
-    <a data-ng-class="{ active: activeTab.name == 'payments' }" data-ng-model="activeTab.name" btn-radio="'payments'" class="left-nav-link">Payments<i class="fa fa-caret-right"></i></a>
-    <a data-ng-class="{ active: activeTab.name == 'referalls' }" data-ng-model="activeTab.name" btn-radio="'referalls'" class="left-nav-link">Referrals<i class="fa fa-caret-right"></i></a>
+    <a href="/{{openTab.name}}/earnings" class="left-nav-link {{expression ' activeTab.name == \'earnings\' ? \'active\' : \'\' '}}" data-ng-model="activeTab.name" btn-radio="'earnings'" data-ng-attr-href="/&#123;&#123;openTab.name&#125;&#125;/earnings" data-ng-attr-class="left-nav-link &#123;&#123; activeTab.name == 'earnings' ? 'active' : '' &#125;&#125;">Earnings<i class="fa fa-caret-right"></i></a>
+    <a href="/{{openTab.name}}/payments" class="left-nav-link {{expression ' activeTab.name == \'payments\' ? \'active\' : \'\' '}}" data-ng-model="activeTab.name" btn-radio="'payments'" data-ng-attr-href="/&#123;&#123;openTab.name&#125;&#125;/payments" data-ng-attr-class="left-nav-link &#123;&#123; activeTab.name == 'payments' ? 'active' : '' &#125;&#125;">Payments<i class="fa fa-caret-right"></i></a>
+    <a href="/{{openTab.name}}/referalls" class="left-nav-link {{expression ' activeTab.name == \'referalls\' ? \'active\' : \'\' '}}" data-ng-model="activeTab.name" btn-radio="'referalls'" data-ng-attr-href="/&#123;&#123;openTab.name&#125;&#125;/referalls"
+    data-ng-attr-class="left-nav-link &#123;&#123; activeTab.name == 'referalls' ? 'active' : '' &#125;&#125;">Referrals<i class="fa fa-caret-right"></i></a>
   </div>
   <div class="tab-content">
     <div data-ng-show="activeTab.name == 'earnings'" {{hbsShow "activeTab.name == 'earnings'"}} class="charts-container">
