--- a/compiled-templates/modules/tools/tools.tpl.html
+++ b/compiled-templates/modules/tools/tools.tpl.html
@@ -10,7 +10,7 @@
   </div>
   <div class="content-container">
 
-    <div class="tab-content" data-ng-show="activeTab.name == 'Boutique'" {{hbsShow "activeTab.name == 'Boutique'"}}>
+    <div class="tab-content">
       <div class="widget-options">
         <div class="presets">
           <a class="preset fa fa-square" data-ng-model="preset.name" btn-radio="'lookbook'" class="preset"></a>
@@ -18,18 +18,13 @@
           <a class="preset fa fa-ellipsis-h" data-ng-model="preset.name" btn-radio="'row'" class="preset"></a>
         </div>
         {{#forEach 'option' in boutique.sortedOptions}}
-          <div data-option="{{expression " option.name.toLowerCase() "}}" class="widget-option" data-ng-repeat="option in boutique.sortedOptions" data-ng-attr-data-option="&#123;&#123;option.name.toLowerCase()&#125;&#125;">
+          <div data-option="{{expression 'option.name.toLowerCase()'}}" class="widget-option" data-ng-repeat="option in boutique.sortedOptions" data-ng-attr-data-option="&#123;&#123;option.name.toLowerCase()&#125;&#125;">
 
             <div class="name"><span data-ng-bind="option.name">{{option.name}}</span>
             </div>
-            {{#ifExpression "option.type == 'checkbox'"}}
-              <input data-ng-if="option.type == 'checkbox'" type="checkbox" data-ng-model="option.model">
-            {{/ifExpression}}
-            l}}</span>
-            {{#ifExpression "option.type == 'range'"}}
-              <input data-ng-if="option.type == 'range'" type="range" min="{{option.min}}" max="{{option.max}}" step="{{option.step}}" data-ng-model="option.model" data-ng-attr-min="&#123;&#123;option.min&#125;&#125;">
-            {{/ifExpression}}
-            ions="option for option in option.options"></select>
+
+
+
           </div>
         {{/forEach}}
 
@@ -78,10 +73,10 @@
                     {{#forEach 'result' in page}}
                       <div class="boutique-widget-span" data-ng-repeat="result in page">
 
-                        <div data-ng-style="{ width: boutique.options.size.model + 'px', height: boutique.options.size.model + 'px' }" data-show-on-hover="<span data-ng-bind=" boutique.options.showInfo.model ">{{boutique.options.showInfo.model}}</span>" data-show-brand="<span data-ng-bind="
-                        boutique.options.showBrand.model ">{{boutique.options.showBrand.model}}</span>" data-show-price="<span data-ng-bind=" boutique.options.showPrice.model ">{{boutique.options.showPrice.model}}</span>" class="widget-image boutique-widget">
+                        <div data-ng-style="{ width: boutique.options.size.model + 'px', height: boutique.options.size.model + 'px' }" data-show-on-hover="{{boutique.options.showInfo.model}}" data-show-brand="{{boutique.options.showBrand.model}}" data-show-price="{{boutique.options.showPrice.model}}"
+                        class="widget-image boutique-widget" data-ng-attr-data-show-on-hover="&#123;&#123;boutique.options.showInfo.model&#125;&#125;" data-ng-attr-data-show-brand="&#123;&#123;boutique.options.showBrand.model&#125;&#125;" data-ng-attr-data-show-price="&#123;&#123;boutique.options.showPrice.model&#125;&#125;">
                           <div class="image-container">
-                            <img data-ng-src="&#123;&#123;result.image.sizes.Original.url&#125;&#125;" src="<span data-ng-bind=" result.image.sizes.Original.url ">{{result.image.sizes.Original.url}}</span>">
+                            <img data-ng-src="&#123;&#123;result.image.sizes.Original.url&#125;&#125;" src="{{result.image.sizes.Original.url}}">
                           </div>
                           <div class="details">
                             {{#if boutique.options.showBrand.model}}
